# Computer-Graphics-Course

./: CMakeLists.txt  LICENSE  README.md  assignment-01.cmake  assignment-03.cmake  assignment-04.cmake  assignment-05.cmake  assignment-06.cmake  assignment-07.cmake  assignment-rc.cmake
core/: assert.h  color.cpp  color.h  homogeneouscoord.cpp  homogeneouscoord.h  image.cpp  image.h  interpolate-impl.h  interpolate.cpp  interpolate.h  macros.h  matrix.cpp  matrix.h  point.cpp  point.h  random.cpp  vector.cpp  vector.h
core/exr/: tinyexr.h
main/: a_cameras.cpp  a_distributed.cpp  a_indexing.cpp  a_instancing.cpp  a_julia.cpp  a_lighting.cpp  a_local.cpp  a_mappers.cpp  a_materials.cpp  a_render_chessking.cpp  a_smooth.cpp  a_solids.cpp  a_textures.cpp  main.cpp
models/: pawn.mtl  rc_king.mtl  rc_pawn.mtl  rc_plane.mtl  rc_queen.mtl  rc_rook.mtl
models/prev/: rc_scene.mtl
rt/: bbox.cpp  bbox.h  intersection.cpp  intersection.h  primitive.h  ray.cpp  renderer.cpp
rt/cameras/: dofperspective.cpp  dofperspective.h  environment.cpp  environment.h  fisheye.cpp  fisheye.h  orthographic.cpp  orthographic.h  perspective.cpp  perspective.h
rt/coordmappers/: cylindrical.cpp  cylindrical.h  plane.cpp  plane.h  spherical.cpp  spherical.h  tmapper.cpp  tmapper.h  world.cpp  world.h
rt/groups/: bvh.cpp  bvh.h  group.h  simplegroup.cpp  simplegroup.h
rt/integrators/: casting.cpp  casting.h  castingdist.cpp  castingdist.h  raytrace.cpp  recraytrace.cpp  recraytrace.h
rt/lights/: arealight.cpp  arealight.h  directional.cpp  directional.h  light.h  pointlight.cpp  pointlight.h  spotlight.cpp  spotlight.h
rt/loaders/: obj.cpp  objmat.cpp
rt/materials/: combine.cpp  combine.h  conductor.cpp  conductor.h  dielectric.cpp  dielectric.h  dummy.cpp  flatmaterial.cpp  flatmaterial.h  fuzzyconductor.cpp  fuzzyconductor.h  lambertian.cpp  lambertian.h  material.h  phong.cpp  phong.h
rt/primmod/: instance.cpp  instance.h
rt/solids/: aabox.cpp  aabox.h  disc.cpp  disc.h  infiniteplane.cpp  infiniteplane.h  quad.cpp  quad.h  solid.cpp  solid.h  sphere.cpp  sphere.h  striangle.cpp  striangle.h  triangle.cpp  triangle.h
rt/textures/: checkerboard.cpp  checkerboard.h  constant.cpp  constant.h  imagetex.cpp  imagetex.h  perlin.cpp  perlin.h
